2018-03-24  Hironobu Yamashita <h.y.acetaminophen@gmail.com>
            Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* xetex.ch: Recover the right \lastnodetype initialization
	value ignored by tex.ch.

2018-02-26  Jonathan Kew <jfkthame@gmail.com>

	* xetex.web: Fix the code to skip discretionaries when looking
	for a |native_word|.

2018-02-04  Jonathan Kew <jfkthame@gmail.com>

	* NEWS: Update for 0.99999.

2018-02-03  Jonathan Kew <jfkthame@gmail.com>

	* Bump version number to 0.99999, aiming for the TL'18 release.
	Fix issues reported on https://sourceforge.net/p/xetex/bugs
	* xetex.web, xetex.ch: Patch from Hironori Kitagawa to
	integrate prim_eqtb into eqtb. Fixes issue where
	\primitive\vrule\q incorrectly swallows the \q instead of
	giving an error. Fixes #143.
	* xetex.web: Patch from Hironobu Yamashita for \strcmp and
	\mdfivesum errors. Fixes #144.
	* xetex.web: Patch from Hironobu Yamashita for \uchyph with
	native fonts. Fixes #145.
	* XeTeX_ext.[ch]: Patch from Hironobu Yamashita to properly
	close input pipes. Fixes 147.
	* xetex.web: Leave text as UTF-16 in trick_buf for better
	error context printing. (Mostly) fixes #146.
	It's still possible that error context could include half of
	a supplementary-plane character (i.e. an unpaired surrogate).
	Should be a lot less likely, and less troublesome than broken
	UTF-8, however.
	* XeTeXFontMgr.cpp, XeTeXFontMgr.h: Convert optical size info
	in OpenType 'size' feature from PostScript to TeX points.
	Note that this will change behavior for existing documents
	that use OpenType fonts from optically-sized families, and
	depend on XeTeX choosing the appropriate face for a given
	size: the boundaries at which face selection changes will be
	slightly shifted (corrected) from how earlier versions behaved.
	* xetex.web: Avoid prematurely merging following text with the
	no-break text of a \discretionary. We don't want to combine
	text after \discretionary{A}{B}{C} into the same node as the