@@ -1,3 +1,7 @@
+2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* XeTeX_pic.c: Allow non-ascii image names (W32 only).
+
 2018-03-24  Hironobu Yamashita <h.y.acetaminophen@gmail.com>
             Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
 
